--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^16.18.36",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
+    "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "history": "^5.3.0",
     "node-sass": "^9.0.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
@@ -53,6 +55,7 @@
   },
   "devDependencies": {
     "jest": "^29.5.0",
+    "msw": "^1.2.2",
     "sass-loader": "^13.3.2"
   }
 }
